# ChangeLog for dev-ruby/nokogiri-happymapper
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*nokogiri-happymapper-0.5.7 (04 Jul 2013)

  04 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  +nokogiri-happymapper-0.5.7.ebuild, +metadata.xml:
  Initial import. New dependency for pivotal-tracker.
