@@ -1,1 +1,2 @@
 DIST nokogiri-happymapper-0.5.7.gem 52224 SHA256 7773a9666e29c9443e9d461f0598900e48b70263726c4ee098b92c04b0e5bd43 SHA512 88579c4415ae8d31c0e2d7e89a3c7b617b02630c1c8fcd10c798a5bb8bfa773108e352cbd50517b6d79d3a508d5cda280521c25d1f6362875232769876680b45 WHIRLPOOL e2a062e647e5d4c4c83c886900b08b69c8cdad9c07feb1913bb10e6292fb6816407ad12c3b1f32f33e00c44561fcba1787db88dadcf0ebdf55dfaa2d8b84d66e
+DIST nokogiri-happymapper-0.5.8.gem 53760 SHA256 1353a30085e368e981a50b9e0563d79787da76de49e25fde2331e4d12c42cf28 SHA512 92204df155c489529cf50c88c2d16b67191e8e9c7f0010eb5794dadcc884d94660cec50c21a72ac6a17a74fa8524c6bc9032249427ee7aeffda11dc229097d8b WHIRLPOOL e3ff705c62ec20b8aa6773ffb4c817d2954d68a5a48baf10dda98c97b4434947fb68bb362ee009e1f85df0c71752fcc32512a9d9dbe5035286a75f212c00cdc1
