@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*nokogiri-happymapper-0.5.8 (24 Oct 2013)
+
+  24 Oct 2013; Hans de Graaff <graaff@gentoo.org>
+  +nokogiri-happymapper-0.5.8.ebuild:
+  Version bump.
+
 *nokogiri-happymapper-0.5.7 (04 Jul 2013)
 
   04 Jul 2013; Hans de Graaff <graaff@gentoo.org>
